welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: ';' expected but ')' found.
	if (a=b){return 2*a+2*b)}else{a+b}
                               ^